# FashionDesignAIApp

./: .env.example  .gitattributes  .gitignore  AGENTS.md  README.md  ai_fashion_design_app_development_plan.md  ai_fashion_design_app_planning_prompt.md  compose.yaml  package-lock.json  package.json
apps/desktop/: electron.vite.config.ts  package.json  tsconfig.json
docs/: 00_tooling_knowledge_base.md  01_learning_roadmap.md  02_senior_development_operating_guide.md
docs/ai/: README.md  command_interpretation_flow.md  error_handling_plan.md  evaluation_examples.md  operation_tool_schema_plan.md  prompting_strategy.md  validation_and_clarification_rules.md
docs/api/: README.md
docs/architecture/: adr_0001_structured_garment_spec_source_of_truth.md  adr_0002_electron_react_typescript_desktop.md  adr_0003_fastapi_backend.md  adr_0004_postgresql_primary_database.md  adr_0005_backend_owns_ai_secrets.md  (+3 more)
services/api/: README.md  alembic.ini  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: 20260709_0001_design_versioning.py  20260709_0002_render_jobs.py  20260709_0003_render_input_immutability.py  20260710_0004_tech_pack_exports.py  20260711_0005_tech_pack_retries.py
services/api/src/fashion_api/: __init__.py  celery_app.py  config.py  database.py  main.py  models.py  providers.py  rendering.py  schemas.py  services.py  storage.py  tasks.py  tech_pack_renderers.py  tech_pack_storage.py  tech_packs.py
services/api/tests/: conftest.py  test_designs.py  test_health.py  test_postgres_integration.py  test_renders.py  test_tech_packs.py
(+150 files in other folders)
