[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "fashion-design-ai-api"
version = "0.1.0"
description = "FastAPI persistence service for Fashion Design AI"
requires-python = ">=3.12,<3.15"
dependencies = [
  "alembic>=1.16,<2",
  "celery[redis]>=5.6,<6",
  "fastapi>=0.116,<1",
  "openai>=2.45,<3",
  "pillow>=12.3,<13",
  "psycopg[binary]>=3.2,<4",
  "pydantic-settings>=2.10,<3",
  "reportlab>=5.0,<6",
  "sqlalchemy>=2.0,<3",
  "uvicorn[standard]>=0.35,<1",
  "xlsxwriter>=3.2,<4",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "pytest>=8.4,<9",
  "pytest-cov>=6.2,<7",
  "pypdf>=6.0,<7",
  "ruff>=0.12,<1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]
markers = ["postgres: requires a migrated PostgreSQL test database"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]
